--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -15,6 +15,7 @@
         <%= campground.location %>
     </h2>
     <footer>
+        <a href="/campgrounds/<%= campground._id %>/edit">Edit</a>
         <a href="/campgrounds">All Campgrounds</a>
     </footer>
 
