--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<% layout('../layouts/boilerplate') %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show</title>
-</head>
-
-<body>
     <h1>
         <%= campground.title %>
     </h1>
@@ -24,7 +16,3 @@
         <a href="/campgrounds/<%= campground._id %>/edit">Edit</a>
         <a href="/campgrounds">All Campgrounds</a>
     </footer>
-
-</body>
-
-</html>
