added bootstrap for navbar and footer

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,4 +1,4 @@
-<% layout('../layouts/boilerplate') %>
+<% layout('layouts/boilerplate') %>
     <h1>Edit Campgrounds</h1>
     <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
         <div>
