--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,4 +1,4 @@
-<% layout('../layouts/boilerplate') %>
+<% layout('layouts/boilerplate') %>
     <form action="/campgrounds" method="POST">
         <div>
             <label for="title">Title</label>
