--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -5,10 +5,30 @@
     </div>
     <ul>
         <% for (let campground of campgrounds){ %>
-            <li>
-                <a href="/campgrounds/<%= campground._id %>">
-                    <%= campground.title %>
-                </a>
-            </li>
+            <div class="card">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img class="img-fluid" alt="" src="<%= campground.image %>">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <%= campground.title %>
+                            </h5>
+                            <p class="card-text">
+                                <%= campground.description %>
+                            </p>
+                            <p class="card-text">
+                                <small class="text-muted">
+                                    <%= campground.location %>
+                                </small>
+                            </p>
+                            <a class="btn btn-success" href="/campgrounds/<%= campground._id %>">View <%=
+                                    campground.title %></a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
             <% } %>
     </ul>
