--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,14 +1,46 @@
 <% layout('layouts/boilerplate') %>
-    <form action="/campgrounds" method="POST">
-        <div>
-            <label for="title">Title</label>
-            <input type="text" name="campground[title]" id="title">
-        </div>
-        <div>
-            <label for="location">Location</label>
-            <input type="text" name="campground[location]" id="location">
-        </div>
-        <button>Add Campground</button>
+    <div class="row">
+        <h1 class="text-center">New Campground</h1>
+        <div class="col-6 offset-3">
+            <form action="/campgrounds" method="POST">
+                <div class="mb-3">
+                    <label class="form-label" for="title">Title</label>
+                    <input class="form-control" type="text" name="campground[title]" id="title">
+                </div>
 
-    </form>
-    <a href="/campgrounds">All Campgrounds</a>
+                <div class="mb-3">
+                    <label class="form-label" for="location">Location</label>
+                    <input class="form-control" type="text" name="campground[location]" id="location">
+                </div>
+
+                <div class="mb-3">
+                    <label class="form-label" for="image">Image URL</label>
+                    <input class="form-control" type="text" name="campground[image]" id="image">
+                </div>
+
+                <div class="mb-3">
+                    <label class="form-label" for="price">Campground Price</label>
+                    <div class="input-group">
+                        <span class="input-group-text">$</span>
+                        <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)"
+                            name="campground[price]" placeholder="0" id="price">
+                        <span class="input-group-text">.00</span>
+                    </div>
+                </div>
+
+                <div class="mb-3">
+                    <label class="form-label" for="description">Description</label>
+                    <textarea class="form-control" type="text" name="campground[description]"
+                        id="description"></textarea>
+                </div>
+
+                <div class="mb-3">
+                    <button class="btn btn-primary">Add Campground</button>
+                </div>
+
+            </form>
+
+            <a href="/campgrounds">All Campgrounds</a>
+
+        </div>
+    </div>
