--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -2,23 +2,24 @@
     <div class="row">
         <h1 class="text-center">Edit Campground</h1>
         <div class="col-6 offset-3">
-            <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+            <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate
+                class="validated-form">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
                     <input class="form-control" type="text" name="campground[title]" id="title"
-                        value="<%= campground.title %>">
+                        value="<%= campground.title %>" required>
                 </div>
 
                 <div class="mb-3">
                     <label class="form-label" for="location">Location</label>
                     <input class="form-control" type="text" name="campground[location]" id="location"
-                        value="<%= campground.location %>">
+                        value="<%= campground.location %>" required>
                 </div>
 
                 <div class="mb-3">
                     <label class="form-label" for="image">Image URL</label>
                     <input class="form-control" type="text" name="campground[image]" id="image"
-                        value="<%= campground.image %>">
+                        value="<%= campground.image %>" required>
                 </div>
 
                 <div class="mb-3">
@@ -26,15 +27,16 @@
                     <div class="input-group">
                         <span class="input-group-text">$</span>
                         <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)"
-                            name="campground[price]" placeholder="0" id="price" value="<%= campground.price %>">
+                            name="campground[price]" placeholder="0" id="price" value="<%= campground.price %>"
+                            required>
                         <span class="input-group-text">.00</span>
                     </div>
                 </div>
 
                 <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
-                    <textarea class="form-control" type="text" name="campground[description]"
-                        id="description"><%= campground.description %></textarea>
+                    <textarea class="form-control" type="text" name="campground[description]" id="description"
+                        required><%= campground.description %></textarea>
                 </div>
 
                 <div class="mb-3">
