installed cloudinary multer-storage-cloudinary and multer, implemented image upload, uploaded image links to Mongo, display images in carousel, delete images in edit page

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -27,6 +27,8 @@
                 integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
                 crossorigin="anonymous"></script>
 
+            <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
+
             <script src='/javascripts/validateForms.js'></script>
 
 
