--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -3,7 +3,7 @@
         <h1 class="text-center">Edit Campground</h1>
         <div class="col-6 offset-3">
             <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate
-                class="validated-form">
+                class="validated-form" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
                     <input class="form-control" type="text" name="campground[title]" id="title"
@@ -17,9 +17,8 @@
                 </div>
 
                 <div class="mb-3">
-                    <label class="form-label" for="image">Image URL</label>
-                    <input class="form-control" type="text" name="campground[image]" id="image"
-                        value="<%= campground.image %>" required>
+                    <label for="images" class="form-label">Add more images</label>
+                    <input class="form-control" type="file" id="images" name="image" multiple>
                 </div>
 
                 <div class="mb-3">
@@ -37,6 +36,17 @@
                     <label class="form-label" for="description">Description</label>
                     <textarea class="form-control" type="text" name="campground[description]" id="description"
                         required><%= campground.description %></textarea>
+                </div>
+
+                <div class="mb-3">
+                    <% campground.images.forEach((img, i)=> { %>
+                        <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="">
+                        <div class="form-check-inline">
+                            <input type="checkbox" id="image<%= i %>" name="deleteImages[]" value="<%= img.filename %>">
+                        </div>
+                        <label for="image<%= i %>">Delete?</label>
+                        <% }) %>
+
                 </div>
 
                 <div class="mb-3">
