--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,8 +3,27 @@
 
     <div class="row">
         <div class="col-6">
+            <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <% campground.images.forEach((img, i)=> { %>
+                        <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
+                            <img class="d-block w-100" src="<%= img.url %>" alt="">
+                        </div>
+                        <% }) %>
+
+                </div>
+                <% if(campground.images.length> 1) { %>
+                    <a class="carousel-control-prev" href="#campgroundCarousel" role="button" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#campgroundCarousel" role="button" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only"></span>
+                    </a>
+                    <% } %>
+            </div>
             <div class="card mb-5">
-                <img src="<%= campground.image %>" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">
                         <%= campground.title %>
