added map functionality using mapbox, auto formatting needs to be surpressed on saving show.ejs

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -8,7 +8,13 @@
             <div class="card">
                 <div class="row">
                     <div class="col-md-4">
-                        <img class="img-fluid" alt="" src="<%= campground.images[0].url %>">
+                        <% if(campground.images.length) {%>
+                            <img class="img-fluid" alt="" src="<%= campground.images[0].url %>">
+                            <% } else {%>
+                                <img class="img-fluid" alt=""
+                                    src="https://res.cloudinary.com/dwhmk7jcw/image/upload/v1738134979/YelpCamp/jys1b6fz1tcwkqkshaqx.jpg">
+                                <% } %>
+
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
