--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,5 +1,8 @@
 <% layout('layouts/boilerplate') %>
     <link rel="stylesheet" href="/stylesheets/stars.css">
+    <link rel="stylesheet" href="/stylesheets/styles.css">
+
+
 
     <div class="row">
         <div class="col-6">
@@ -60,6 +63,7 @@
 
         </div>
         <div class="col-6">
+            <div id='map' class="map-container mb-3"></div>
             <% if(currentUser){ %>
                 <h2>Leave a Review</h2>
                 <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validated-form"
@@ -125,3 +129,10 @@
 
         </div>
     </div>
+
+    <script>
+        const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
+        const campground = <%- JSON.stringify(campground) %>;
+    </script>
+
+    <script src="/javascripts/showPageMap.js"></script>
