--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,7 @@
 <% layout('layouts/boilerplate') %>
+
+    <div id="map" style="width: 100%; height: 400px"></div>
+
     <h1>All Campgrounds</h1>
     <div>
         <a href="/campgrounds/new">Add Campground</a>
@@ -38,3 +41,10 @@
             </div>
             <% } %>
     </ul>
+
+    <script>
+        const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
+        const campgrounds = {features: <%- JSON.stringify(campgrounds) %>};
+    </script>
+
+    <script src="/javascripts/clusterMap.js"></script>
