--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,11 +1,9 @@
 <% layout('layouts/boilerplate') %>
     <link rel="stylesheet" href="/stylesheets/stars.css">
-    <link rel="stylesheet" href="/stylesheets/styles.css">
-
-
-
+    <!-- <link rel="stylesheet" href="/stylesheets/styles.css"> -->
+<div class="container">
     <div class="row">
-        <div class="col-6">
+        <div class="col">
             <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <% campground.images.forEach((img, i)=> { %>
@@ -62,8 +60,8 @@
 
 
         </div>
-        <div class="col-6">
-            <div id='map' class="map-container mb-3"></div>
+        <div class="col">
+            <div id='map' style='width: 100%; height: 400px' class="mb-3"></div>
             <% if(currentUser){ %>
                 <h2>Leave a Review</h2>
                 <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validated-form"
@@ -129,6 +127,7 @@
 
         </div>
     </div>
+</div>
 
     <script>
         const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
