styled home page, login and register page, added controls for maps

--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,21 +1,38 @@
 <% layout('layouts/boilerplate') %>
-    <h1>Register</h1>
-    <form action="/register" method="POST" class="validated-form" novalidate>
-        <div class="mb-3">
-            <label class="form-label" for="username">Username</label>
-            <input class="form-control" type="text" name="username" id="username" required>
-            <div class="valid-feedback">Looks good!</div>
-        </div>
-        <div class="mb-3">
-            <label class="form-label" for="email">Email</label>
-            <input class="form-control" type="email" name="email" id="email" required>
-            <div class="valid-feedback">Looks good!</div>
-        </div>
-        <div class="mb-3">
-            <label class="form-label" for="password">Password</label>
-            <input class="form-control" type="password" name="password" id="password" required>
-            <div class="valid-feedback">Looks good!</div>
-        </div>
-        <button class="btn btn-success">Register</button>
+    <div class="container justify-content-center align-items-center mt-5">
+        <div class="row">
+            <div class='col-md-6 offset-md-3 col-xl-4 offset-xl-4'>
+                <div class="card shadow">
+                    <img src="https://images.unsplash.com/photo-1542338106-1b4bfe84d5df?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="" class="card-img-top">
+                    <div class="card-body">
+                        <h1>Register</h1>
+                        <form action="/register" method="POST" class="validated-form" novalidate>
+                            <div class="mb-3">
+                                <label class="form-label" for="username">Username</label>
+                                <input class="form-control" type="text" name="username" id="username" autofocus
+                                    required>
+                                <div class="valid-feedback">Looks good!</div>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label" for="email">Email</label>
+                                <input class="form-control" type="email" name="email" id="email" required>
+                                <div class="valid-feedback">Looks good!</div>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label" for="password">Password</label>
+                                <input class="form-control" type="password" name="password" id="password" required>
+                                <div class="valid-feedback">Looks good!</div>
+                            </div>
+                            <div class="d-grid gap-2">
+                                <button class="btn btn-success">Register</button>
+                            </div>
 
-    </form>
+                        </form>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
