--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -8,7 +8,7 @@
     </div>
     <ul>
         <% for (let campground of campgrounds){ %>
-            <div class="card">
+            <div class="card mb-3">
                 <div class="row">
                     <div class="col-md-4">
                         <% if(campground.images.length) {%>
@@ -44,7 +44,7 @@
 
     <script>
         const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
-        const campgrounds = {features: <%- JSON.stringify(campgrounds) %>};
+        const campgrounds = { features: <%- JSON.stringify(campgrounds) %>};
     </script>
 
     <script src="/javascripts/clusterMap.js"></script>
