--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -12,9 +12,9 @@
                 <div class="row">
                     <div class="col-md-4">
                         <% if(campground.images.length) {%>
-                            <img class="img-fluid" alt="" src="<%= campground.images[0].url %>">
+                            <img crossorigin="anonymous" class="img-fluid" alt="" src="<%= campground.images[0].url %>">
                             <% } else {%>
-                                <img class="img-fluid" alt=""
+                                <img crossorigin="anonymous" class="img-fluid" alt=""
                                     src="https://res.cloudinary.com/dwhmk7jcw/image/upload/v1738134979/YelpCamp/jys1b6fz1tcwkqkshaqx.jpg">
                                 <% } %>
 
